<resources>
    <string name="app_name">TaskMaster</string>
    <string name="enter">Enter</string>
    <string name="registerLink">If you doesn\'t have an account yet, click me!</string>
    <string name="login">Login</string>
    <string name="newTask">New Task</string>
    <string name="save">Save</string>
    <string name="register">Register</string>
    <string name="example">Example</string>
    <string name="date">Date:</string>
    <string name="selectedDate">1/12/23</string>
    <string name="description">Description:</string>
    <string name="selectedDescription">Something here</string>
    <string name="edit">Edit</string>
    <string name="editTask">Edit Task</string>
    <string name="today">Today</string>
    <string name="delete">Delete</string>
</resources>